# stock-valuation

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  README.md  config.yaml  pyproject.toml
stock_valuation/: __init__.py  cli.py  config.py  valuation.py  webapp.py
stock_valuation/data/: cache.py  edgar.py  market.py
stock_valuation/model/: dcf.py  fcf.py  projections.py  wacc.py
stock_valuation/report/: charts.py  render.py
stock_valuation/report/templates/: comparison.html.j2  report.html.j2
stock_valuation/web/templates/: docs.html  index.html  results.html
tests/: test_dcf.py
