[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-valuation"
version = "0.1.0"
description = "Discounted Cash Flow (DCF) valuation tool using SEC EDGAR and Yahoo Finance data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
    "numpy>=1.23",
    "yfinance>=0.2.40",
    "matplotlib>=3.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
stock-valuation = "stock_valuation.cli:main"
stock-valuation-web = "stock_valuation.webapp:main"

[tool.setuptools.packages.find]
include = ["stock_valuation*"]

[tool.setuptools.package-data]
"stock_valuation.report" = ["templates/*.j2"]
"stock_valuation.web" = ["templates/*.html"]
